# Lua-C-API-Examples

./: .ccls  .gitignore  .gitpod.yml  01_hello_world.c  02_gfunc.c  02_gfunc.lua.in  02_gfunc_test.lua  03-basic-lib.c  03-basic-lib.lua.in  03_basic_lib.c  04_table.c  04_table.lua  05-metatable.c  05_metatable.c  05_metatable.lua  06-userdata.c  06-userdata.lua.in  06_userdata.c  06_userdata.lua.in  07-stack-dump.c  07_stack_dump.c  08-versions.c  08_versions.c  09_newlib.c  09_newlib.lua.in  10-functions.c  10-functions.lua.in  README.md  constants.h.in  meson.build  meson_options.txt
.github/workflows/: build.yml  ci.yml
src/: 01-hello-world.c  03_basic_lib.lua.in  05-metatable.lua  06_userdata.c  08_versions.c  09-newlib.c  11-hooks.c  11-hooks.lua  12-multi-state.c  12-multiple-vm.c  12-multiple-vm.lua  constants.h.in  meson.build
